modify item quantity on direct input type

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
             <div class="Modal__wrap">
                 <div class="Modal__block">
                     <h2>Order</h2>
-                    <img src="img/icons/cross.png" class="Modal__close close">
+                    <img src="img/icons/cross.png" class="Modal__close close" id ="cross">
                 </div>
                 <div id="items" class="Modal__items"></div>
                 <p id="stock_info"></p>
+                <p id="balance_info"></p>
                 <div class="Modal__block bolder">
                     <p>Total</p>
                     <span id="total"></span>
                 </div>
                 <div class="Modal__buy-buttons">
-                    <button class="close" type="button">Buy</button>
+                    <button id = "buy" class="close" type="button">Buy</button>
                     <button id="cancel" class="close">Cancel</button>
                 </div>
 
